
0.35.6 (December 22nd, 2014)
• bugfix in reading a cherrytree XML document
• bugfix in relative links click
• bugfix in import from treepad lite
• updated French language from new maintainer Klaus Becker

0.35.5 (November 29th, 2014)
• bugfix: conversion from rich text to plain text of links results in the link target only if the link is the sole text copied and is not a link to node
• bugfix: relative links are to be relative to the document folder and not to the executable folder
• bugfix: right click over a selection including a link causes deselection if the right click is over the link
• bugfix in import from tuxcards
• bugfix: paste from firefox on windows with russian language page
• bugfix: paste text in a codebox causing an auto resize, change node without saving before, go back to the older node, the text pasted in the codebox is lost
• changed automatic conversion from ascii chars to “todo list” from “[ ] ” to “[] ”

0.35.4 (November 10th, 2014)
• bugfix: export to plain text and conversion from rich text to plain text problems in 0.35.3
• bugfix: automatic list set after inserting "* " and "[ ] " problems in 0.35.3
• bugfix: crash in codebox auto expansion
• bugfix: crash loading the links dialog

0.35.3 (November 2nd, 2014)
• fixed bugs in copying rich text between cherrytree, libreoffice and gmail preserving the rich text properties; as a consequence the html import/export was improved
• fixed bugs in importing text files with non utf-8 encoding
• fixed bug in automatic word selection when applying a formatting
• fixed bug in TOC not recognizing headers
• fixed bug causing the codeboxes with automatic expansion to crash
• fixed bugs in the conversion between the three list types
• changed the behaviour of the direction arrows in the tree navigation: the left key collapses the node, the right key expands the node, the up and down arrows move the selection up and down not only between siblings (as it was before) but in the whole tree